--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
 <head>
-    <meta charset="utf-8">
+
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=devide-width, initial-scale=1.0">
+
     <title>MEDUSA LAB</title>
 </head>
 <body>
 
     <h1>MEDUSA CREATIVE LAB</h1>
+    <div style="text-align: center;padding: 150px 0;">
+        <object>
+            <embed src="logo_medusa2.svg">
+        </object>
+    </div>
 
+    
 </body>
 </html>
