--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 
-    <h1>MEDUSA CREATIVE LAB</h1>
+    <h1>MEDUSA LAB</h1>
     <div style="text-align: center;padding: 150px 0;">
         <object>
             <embed src="logo_medusa2.svg">
         </object>
     </div>
 
-    
+
 </body>
 </html>
