--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=devide-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>MEDUSA LAB</title>
 </head>
 <body>
 
     <h1>MEDUSA LAB</h1>
+    <h2>[UNINVERSE
     <div style="text-align: center;padding: 150px 0;">
         <object>
             <embed src="logo_medusa2.svg">
